<resources>
    <string name="app_name">Dialog</string>
    <string name="mainTextView">TextView</string>
    <string name="simpleAlert">Simple Alert</string>
    <string name="listAlert">List Alert</string>
    <string name="datePickerAlert">Date picker alert</string>
    <string name="timePickerAlert">Time picker alert</string>
    <string name="customAlert">Custom alert</string>
    <string name="etHint">Type text</string>
    <string name="customButton">Send text</string>
</resources>