<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTextView"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center" >
        <Button
            android:id="@+id/simpleAlertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpleAlert" />
        <Button
            android:id="@+id/listAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listAlert" />
        <Button
            android:id="@+id/datePickerAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datePickerAlert" />
        <Button
            android:id="@+id/timePickerAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timePickerAlert" />
        <Button
            android:id="@+id/customAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customAlert" />
    </LinearLayout>

</LinearLayout>